--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -1,4 +1,4 @@
-/*this css file is going to be shared by a lot of pages; contains the css for the overlay*/
+/*this css file might be shared by a lot of pages; contains the css for the overlay*/
 /* Global variables */
 
 /* add any root colors over here */
