--- a/profile.css
+++ b/profile.css
@@ -1,15 +1,48 @@
+/*
+div{
+    display: none;
+    align-items: none;
+    align-content: none;
+    justify-content: none;
+    word-wrap: none;
+}
+*/
+#breadcrumb{
+/*
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+*/
+}
 #heading{
+/*
     display: flex;
     flex-flow: row;
     justify-content: center;
     align-content: center;
+*/
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 2fr 1fr;
+    
 }
 #photo{
-    flex: 4;
+/*    flex: 2;*/
+    grid-row: 1/3;
+    grid-column: 1/1;
 }
 #name{
-    flex: 4;
+/*    flex: 6;*/
+    grid-row: 1/1;
+    grid-column: 2/2;
+}
+#star{
+    grid-row: 2/2;
+    grid-column: 2/2;
 }
 #edit{
-    flex: 4;
+/*    flex: 2;*/
+    grid-row: 1/3;
+    grid-column: 3/3;
 }
