--- a/profile.css
+++ b/profile.css
@@ -1,34 +1,33 @@
-/*
+:root{
+    --font-size: 1.3em;
+    --font-weight: 400;
+}
+body{
+    font-weight: var(--font-weight);
+}
+.wrapper{
+    padding: 10%;
+}
+.text-primary{
+    color: var(--color-blue);
+}
 div{
-    display: none;
-    align-items: none;
-    align-content: none;
-    justify-content: none;
-    word-wrap: none;
+    text-align: justify;
+    text-justify: inter-word;
 }
-*/
-#breadcrumb{
-/*
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: flex-start;
-*/
+.font-big{
+    font-size: calc(var(--font-size) *2);
+    font-weight: calc(var(--font-weight) *1.5);
 }
+
 #heading{
-/*
-    display: flex;
-    flex-flow: row;
-    justify-content: center;
-    align-content: center;
-*/
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 2fr 1fr;
+    align-items: center;
     
 }
 #photo{
-/*    flex: 2;*/
     grid-row: 1/3;
     grid-column: 1/1;
 }
@@ -36,13 +35,16 @@ div{
 /*    flex: 6;*/
     grid-row: 1/1;
     grid-column: 2/2;
+    justify-self: center;
 }
 #star{
     grid-row: 2/2;
     grid-column: 2/2;
+    justify-self: center;
 }
 #edit{
 /*    flex: 2;*/
     grid-row: 1/3;
     grid-column: 3/3;
+    justify-self: end;
 }
