--- a/profile.css
+++ b/profile.css
@@ -11,6 +11,9 @@ body{
 .text-primary{
     color: var(--color-blue);
 }
+img{
+    max-width: 100px;
+}
 div{
     text-align: justify;
     text-justify: inter-word;
@@ -30,6 +33,7 @@ div{
 #photo{
     grid-row: 1/3;
     grid-column: 1/1;
+    justify-self: center;
 }
 #name{
 /*    flex: 6;*/
@@ -47,4 +51,25 @@ div{
     grid-row: 1/3;
     grid-column: 3/3;
     justify-self: end;
+}
+#content{
+    padding-top: 5%;
+    padding-bottom: 5%;
+    display: grid;
+    grid-template-columns: 0.3fr 1fr 5fr;
+    grid-template-rows: 1fr 1fr 2fr;
+}
+.margin-right{
+    margin-right: 10px;
+}
+#calendar{
+    display: grid;
+    grid-template-columns: 6fr 1fr;   
+}
+#calendar-main{
+    justify-self: center;
+}
+#add-event{
+    justify-self: center;
+    margin: auto;
 }
