plant function buttons added - functionality yet not supported

--- a/plant.css
+++ b/plant.css
@@ -65,3 +65,15 @@
   color: rgb(255,165,0);
 
 }
+
+#plant_functions_container{
+    margin-top: 10vh;
+}
+
+.plant-function {
+  margin-bottom: 5%;
+}
+
+#collapseExample {
+  max-width: 100%;
+}
