--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -55,7 +55,7 @@ input[type="text"] {
     width: 70%;
     height: 80%;
     padding: 2%;
-    background: var(--color-white);
+    background-color: var(--color-white);
     border: 1px solid rgba(255, 255, 255, 0.4);
     border-radius: 2px;
     box-shadow: 0 1px 40px rgba(255, 255, 255, 0.4), 0 0 30px rgba(255, 255, 255, 0.2) inset;
@@ -202,4 +202,9 @@ input[type=radio]{
 }
 .margin-right{
     margin-right: 10px;
+}
+
+.modal-body{
+    width: 100%;
+    height: 100%;
 }
