--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -17,7 +17,7 @@
     font-size: var(--font-size);
 /*    cursor: pointer;*/
 }
-div{
+.centerdiv{
     display: flex;
     align-items: center;
     align-content: center;
@@ -131,12 +131,12 @@ input[type="text"] {
     width: 100%;
 }
 
-img{
+.image{
     max-height: 100%;
     max-width: 100%;
     color: white;
 }
-img:hover{
+.image:hover{
     cursor: pointer;
 	filter: saturate(0) opacity(0.6) brightness(3);
 }
