--- a/profile.css
+++ b/profile.css
@@ -5,14 +5,20 @@
 body{
     font-weight: var(--font-weight);
 }
+#breadcrumb {
+  margin-top: 1%;
+  margin-left: 1%;
+}
+
 .wrapper{
-    padding: 10%;
+    padding: 5%;
 }
 .text-primary{
     color: var(--color-blue);
 }
 img{
-    max-width: 100px;
+    max-width: 70%;
+    border-radius: 0.3em;
 }
 div{
     text-align: justify;
@@ -28,7 +34,7 @@ div{
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 2fr 1fr;
     align-items: center;
-    
+
 }
 #photo{
     grid-row: 1/3;
@@ -65,7 +71,7 @@ div{
 /*
 #calendar-outer{
     display: grid;
-    grid-template-columns: 6fr 1fr;   
+    grid-template-columns: 6fr 1fr;
 }
 */
 #calendar{
@@ -125,5 +131,3 @@ div{
 /*-moz-box-shadow: 0px 0px 21px 2px rgba(0,0,0,0.18);*/
 /*box-shadow: 0px 0px 21px 2px rgba(0,0,0,0.18);*/
 }
-
-
