--- a/searchFilterComponent.css
+++ b/searchFilterComponent.css
@@ -18,27 +18,32 @@
 /*    grid-template-columns: 1fr 2fr;*/
 }
 
-#SearchFilter{
-    flex: 3;
-    max-width: 300px;
-    display: flex;
-    flex-flow: column;
-    position: relative;
-    padding: .5rem 1rem;
+#search_filter_container{
+    height: 92vh;
+    -flex: 3;
+    -max-width: 300px;
+    -display: flex;
+    -flex-flow: column;
+    -position: relative;
+    -padding: .5rem 1rem;
     background: var(--color-lightest-gray);
-    border: 2px solid #00000012;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
+    -border: 2px solid #00000012;
+    -flex-wrap: wrap;
+    -align-items: flex-start;
+    -justify-content: center;
     color: hsl(85, 3%, 39%);
     font-size: var(--font-size-search);
+
 }
+
 #content{
-   flex: 9; 
+   flex: 9;
 }
+
 .g-center{
     align-self: center;
 }
+
 .g-divider {
   height: 1px;
   width:100%;
@@ -47,9 +52,28 @@
   overflow: hidden;
   background-color: #d4d4d4;
 }
+
 .g-filter{
-    margin: 10px 0;
+    padding: 2%;
+    cursor: pointer;
 }
+
+.g-filter:hover{
+  -background-color: #6c757d
+}
+
 .g-indent{
     margin-left: 30px;
+}
+
+#search_term {
+  -width: 80%;
+}
+
+#search_filter_container form{
+  width: 80%;
+}
+
+#search_filter_container .label-text{
+
 }
