--- a/shared.css
+++ b/shared.css
@@ -103,8 +103,13 @@ body {
     margin-right: 10px;
 }
 .margin-left{
-    margin-left: 20px;
+    padding-left: 6%;
 }
 .set-width{
     max-width: 100vw;
+}
+
+
+.green-link{
+  color: var(--green);
 }
