--- a/profile.css
+++ b/profile.css
@@ -131,3 +131,12 @@ div{
 /*-moz-box-shadow: 0px 0px 21px 2px rgba(0,0,0,0.18);*/
 /*box-shadow: 0px 0px 21px 2px rgba(0,0,0,0.18);*/
 }
+#content *{
+    padding: 5px;
+}
+.small-input{
+    width: 70%;
+}
+.g-display-none{
+    display: none;
+}
