--- a/plant-profile.css
+++ b/plant-profile.css
@@ -1,5 +1,5 @@
 :root{
-    --plantprofile-font-size: 1.2em;
+    --plantprofile-font-size: 1em;
     --plantprofile-font-weight: 400;
 }
 #breadcrumb, #plantprofilecontent{
@@ -9,6 +9,12 @@
 #breadcrumb {
     margin-top: 1%;
     margin-left: 1%;
+}
+input[type="text"]{
+    font-size: inherit;
+    font-weight: inherit;
+    color: inherit;
+    text-align: center;
 }
 .g-pad{
     padding: 1%;
@@ -20,21 +26,31 @@ img{
     max-width: 70%;
     border-radius: 0.3em;
 }
+.g-big-button{
+    height: 100%;
+    width: 60%;
+}
 div{
     text-align: justify;
     text-justify: inter-word;
 }
+.g-display-none{
+    display: none;
+}
+.font-big{
+    font-size: calc(var(--plantprofile-font-size) *2);
+    font-weight: calc(var(--plantprofile-font-weight) *1.5);
+}
 .weekday div {
     display: inline-block;
-    vertical-align: middle;
     border-radius: 6px;
-    height: 35px;
-    width: 40px;
+    height: 80%;
+    width: 13%;
     margin-right: 1%;
     line-height: calc(var(--plantprofile-font-size)*1.8);
-    font-size: calc(var(--plantprofile-font-size)*0.7);
+    font-size: calc(var(--plantprofile-font-size)*1.2);
     text-align: center;
-/*    transition: 0.3s;*/
+    transition: 0.3s;
     margin: 1px;
 }
 .weekday-unselect{
@@ -53,4 +69,10 @@ div{
 .text-center{
     float: none; 
     margin: 0 auto;
+}
+.small-input{
+    width: 70%;
+}
+.eliminate-padding-left{
+    padding-left: 0;
 }
