Login and Signup ready and validation done

--- a/login.css
+++ b/login.css
@@ -16,6 +16,11 @@ body, html{
 .login-pad-top{
     padding-top: 2%;
 }
+.required-label:after {
+    content:"*"; 
+    margin-left: 5px;
+    color: var(--red);
+}
 
 /*
 html {
