--- a/shared.css
+++ b/shared.css
@@ -55,7 +55,7 @@ body {
     color: var(--color-aqua);
 }
 .text-green{
-    color: var(--color-green);
+    color: var(--green);
 }
 .text-red{
     color: var(--color-red);
