--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -227,6 +227,11 @@ input[type=radio]{
     grid-template-columns: repeat(3, 1fr) 0.5fr 0.5fr 1fr;
     grid-gap: 2px;
 }
+.label-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 /*will have to override the query*/
 @media (min-width: 575px)
