--- a/plant-profile.css
+++ b/plant-profile.css
@@ -102,3 +102,8 @@ div{
 .eliminate-padding-left{
     padding-left: 0;
 }
+.label-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
