--- a/profile.css
+++ b/profile.css
@@ -133,7 +133,7 @@ input[type=text]{
 #calendar {
 /* 		float: right; */
     margin: 0 auto;
-    width: 900px;
+    width: 90%;
     background-color: #FFFFFF;
     border-radius: 6px;
 /*    box-shadow: 0 1px 2px #C3C3C3;*/
