--- a/plant-profile.css
+++ b/plant-profile.css
@@ -91,10 +91,6 @@ div{
     margin-top: 0.5%;
     margin-bottom: 0.5%;
 }
-.text-center{
-    float: none; 
-    margin: 0 auto;
-}
 .small-input{
     width: 70%;
 }
@@ -103,4 +99,9 @@ div{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+/*ask farnaz if i should have this*/
+.g-min-max-width{
+    min-width: 450px;
+/*    max-width: 600px;*/
 }
