--- a/profile.css
+++ b/profile.css
@@ -2,14 +2,10 @@
     --font-size: 1em;
     --font-weight: 400;
 }
-body{
+#profilecontent{
     font-weight: var(--font-weight);
+    font-size: var(--font-size);
 }
-#breadcrumb {
-  margin-top: 1%;
-  margin-left: 1%;
-}
-
 .wrapper{
     padding: 5%;
 }
@@ -39,6 +35,7 @@ input[type=text]{
     text-align: center;
 }
 
+/*
 #heading{
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -52,7 +49,6 @@ input[type=text]{
     justify-self: center;
 }
 #name{
-/*    flex: 6;*/
     grid-row: 1/1;
     grid-column: 2/2;
     justify-self: center;
@@ -63,7 +59,6 @@ input[type=text]{
     justify-self: center;
 }
 #edit{
-/*    flex: 2;*/
     grid-row: 1/3;
     grid-column: 3/3;
     justify-self: end;
@@ -75,6 +70,7 @@ input[type=text]{
     grid-template-columns: 0.3fr 1fr 5fr;
     grid-template-rows: 1fr 1fr 2fr;
 }
+*/
 .margin-right{
     margin-right: 10px;
 }
@@ -87,14 +83,6 @@ input[type=text]{
 #calendar{
     justify-self: center;
 }
-/*
-#add-event{
-    justify-self: center;
-    margin: auto;
-}
-*/
-
-
 
 /*below is calendar related css*/
 #external-events {
@@ -134,6 +122,7 @@ input[type=text]{
 /* 		float: right; */
     margin: 0 auto;
     width: 90%;
+    max-width: 990px;
     background-color: #FFFFFF;
     border-radius: 6px;
 /*    box-shadow: 0 1px 2px #C3C3C3;*/
