--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -62,14 +62,14 @@ input[type="text"] {
     border: 1px solid rgba(255, 255, 255, 0.4);
     border-radius: 2px;
     box-shadow: 0 1px 40px rgba(255, 255, 255, 0.4), 0 0 30px rgba(255, 255, 255, 0.2) inset;
-    display: grid;
-    grid-template-rows: 1fr 1fr 2fr 2fr 2fr 1fr;
-    grid-template-columns: repeat(3, 1fr) 0.5fr 0.5fr 1fr;
-    grid-gap: 2px;
+/*    display: grid;*/
+/*    grid-template-rows: 1fr 1fr 2fr 2fr 2fr 1fr;*/
+/*    grid-template-columns: repeat(3, 1fr) 0.5fr 0.5fr 1fr;*/
+/*    grid-gap: 2px;*/
 }
 #photo{
-    grid-row: 1/3;
-    grid-column: 1/3;
+/*    grid-row: 1/3;*/
+/*    grid-column: 1/3;*/
     height: 100%;
     width: 100%;
 }
