--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -25,7 +25,11 @@
     word-wrap: break-word;
 }
 input[type="text"] {
-    font-size: inherit;
+    font-size: calc(inherit)*0.9;
+    height: 100%;
+}
+.height-full{
+    
 }
 .border{
     border: 1px solid black;
@@ -36,6 +40,7 @@ input[type="text"] {
 }
 #box{
     position: absolute;
+    overflow-y: scroll;
     top: 50%;
     left: 50%;
     color: var(--color-black);
@@ -52,7 +57,7 @@ input[type="text"] {
     margin-left: 5%;
     margin-right: 5%;
 */
-    width: 70%;
+    width: 80%;
 /*    max height and max width will need to be changed later*/
     max-width: 900px;
     max-height: 700px;
@@ -74,62 +79,63 @@ input[type="text"] {
     width: 100%;
 }
 #plant-name{
-    grid-row: 1/1;
-    grid-column: 3/7;
+/*    grid-row: 1/1;*/
+/*    grid-column: 3/7;*/
     height: 100%;
     width: 100%;
 }
 #plant-type{
-    grid-row: 2/2;
-    grid-column: 3/7;
+/*    grid-row: 2/2;*/
+/*    grid-column: 3/7;*/
     height: 100%;
     width: 100%;
 }
 #watering{
-    grid-row: 3/3;
-    grid-column: 1/5;
+/*    grid-row: 3/3;*/
+/*    grid-column: 1/5;*/
     height: 100%;
     width: 100%;
 }
 #fertilizer{
-    grid-row: 4/4;
-    grid-column: 1/5;
+/*    grid-row: 4/4;*/
+/*    grid-column: 1/5;*/
     height: 100%;
     width: 100%;
 }
 #pesticide{
-    grid-row: 5/5;
-    grid-column: 1/5;
+/*    grid-row: 5/5;*/
+/*    grid-column: 1/5;*/
     height: 100%;
     width: 100%;
 }
 #health{
-    grid-row: 3/3;
-    grid-column: 5/7;
+/*    grid-row: 3/3;*/
+/*    grid-column: 5/7;*/
     height: 100%;
     width: 100%;
 }
 #sunlight{
-    grid-row: 4/4;
-    grid-column: 5/7;
+/*    grid-row: 4/4;*/
+/*    grid-column: 5/7;*/
     height: 100%;
     width: 100%;
 }
 #trimming{
-    grid-row: 5/5;
-    grid-column: 5/7;
+/*    grid-row: 5/5;*/
+/*    grid-column: 5/7;*/
     height: 100%;
     width: 100%;
 }
 #special-instructions{
-    grid-row: 6/6;
-    grid-column: 1/4;
-    height: 100%;
+/*    grid-row: 6/6;*/
+/*    grid-column: 1/4;*/
+/*    height: 50%;*/
+    height: 2em;
     width: 100%;
 }
 #save{
-    grid-row: 6/6;
-    grid-column: 4/7;
+/*    grid-row: 6/6;*/
+/*    grid-column: 4/7;*/
     height: 100%;
     width: 100%;
 }
@@ -170,7 +176,7 @@ input[type="text"] {
 }
 
 .weekDays-selector{
-    height: 100%;
+/*    height: 100%;*/
     width: 100%;
 }
 .weekDays-selector input {
@@ -207,6 +213,9 @@ input[type="text"] {
     flex-flow: column;
     align-items: flex-start;
     font-size: calc(var(--addPlant-font-size)*0.6);
+}
+.small-font{
+    font-size: calc(var(--addPlant-font-size)*0.7);
 }
 input[type=radio]{
     transition: 0.3s;
