--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -17,6 +17,7 @@
     font-size: var(--addPlant-font-size);
 /*    cursor: pointer;*/
 }
+/*
 .centerdiv{
     display: flex;
     align-items: center;
@@ -24,9 +25,11 @@
     justify-content: center;
     word-wrap: break-word;
 }
+*/
 input[type="text"] {
-    font-size: calc(inherit)*0.9;
-/*    height: 100%;*/
+    --font-size: calc(inherit)*0.9;
+    font-size: var(--font-size);
+    height: var(--font-size);
 }
 .height-full{
 
@@ -61,7 +64,7 @@ input[type="text"] {
 /*    max height and max width will need to be changed later*/
     max-width: 1000px;
     -max-height: 700px;
-    -height: 80%;
+    height: 80%;
     padding: 2%;
     background-color: var(--color-white);
     border: 1px solid rgba(255, 255, 255, 0.4);
@@ -130,7 +133,6 @@ input[type="text"] {
 /*    grid-row: 6/6;*/
 /*    grid-column: 1/4;*/
 /*    height: 50%;*/
-    height: 2em;
     width: 100%;
 }
 #save{
