--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -64,7 +64,7 @@ input[type="text"] {
 /*    max height and max width will need to be changed later*/
     max-width: 1000px;
     -max-height: 700px;
-    height: 80%;
+    -height: 80%;
     padding: 2%;
     background-color: var(--color-white);
     border: 1px solid rgba(255, 255, 255, 0.4);
