--- a/plant.css
+++ b/plant.css
@@ -2,12 +2,13 @@
   width: 44%;
   margin: 2%;
   max-height: 600px;
+  overflow-y: scroll;
 }
 
 @media (max-width: 1220px){
   .card{
       width: 95%;
-      -max-height: 1000px;
+      -max-height: 1000px !important;
   }
 
 }
@@ -32,7 +33,7 @@
 }
 
 .card-footer > p {
-  margin-bottom: 0.5rem;
+  -margin-bottom: 0.5rem;
 }
 
 .aggregation-checkbox {
