--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -63,7 +63,7 @@ input[type="text"] {
     width: 80%;
 /*    max height and max width will need to be changed later*/
     max-width: 1000px;
-    -max-height: 700px;
+    max-height: 700px;
     -height: 80%;
     padding: 2%;
     background-color: var(--color-white);
@@ -75,6 +75,9 @@ input[type="text"] {
 /*    grid-template-columns: repeat(3, 1fr) 0.5fr 0.5fr 1fr;*/
 /*    grid-gap: 2px;*/
 }
+
+
+
 #photo{
 /*    grid-row: 1/3;*/
 /*    grid-column: 1/3;*/
