--- a/addPlantComponent.css
+++ b/addPlantComponent.css
@@ -1,5 +1,5 @@
 :root{
-    --addPlant-font-size: 1.2em;
+    --addPlant-font-size: calc(0.7em + 1vh);
 }
 /* Global variables */
 #overlay {
@@ -63,8 +63,8 @@ input[type="text"] {
     width: 80%;
 /*    max height and max width will need to be changed later*/
     max-width: 1000px;
-    max-height: 700px;
-    -height: 80%;
+    -max-height: 700px;
+    height: 75%;
     padding: 2%;
     background-color: var(--color-white);
     border: 1px solid rgba(255, 255, 255, 0.4);
@@ -74,80 +74,6 @@ input[type="text"] {
 /*    grid-template-rows: 1fr 1fr 2fr 2fr 2fr 1fr;*/
 /*    grid-template-columns: repeat(3, 1fr) 0.5fr 0.5fr 1fr;*/
 /*    grid-gap: 2px;*/
-}
-
-@media (max-width: 1044px) {
-    #box label, #box div{
-      font-size: calc(0.3em + 1vh);
-    }
-}
-
-
-#photo{
-/*    grid-row: 1/3;*/
-/*    grid-column: 1/3;*/
-    height: 100%;
-    width: 100%;
-}
-#plant-name{
-/*    grid-row: 1/1;*/
-/*    grid-column: 3/7;*/
-    height: 100%;
-    width: 100%;
-}
-#plant-type{
-/*    grid-row: 2/2;*/
-/*    grid-column: 3/7;*/
-    height: 100%;
-    width: 100%;
-}
-#watering{
-/*    grid-row: 3/3;*/
-/*    grid-column: 1/5;*/
-    height: 100%;
-    width: 100%;
-}
-#fertilizer{
-/*    grid-row: 4/4;*/
-/*    grid-column: 1/5;*/
-    height: 100%;
-    width: 100%;
-}
-#pesticide{
-/*    grid-row: 5/5;*/
-/*    grid-column: 1/5;*/
-    height: 100%;
-    width: 100%;
-}
-#health{
-/*    grid-row: 3/3;*/
-/*    grid-column: 5/7;*/
-    height: 100%;
-    width: 100%;
-}
-#sunlight{
-/*    grid-row: 4/4;*/
-/*    grid-column: 5/7;*/
-    height: 100%;
-    width: 100%;
-}
-#trimming{
-/*    grid-row: 5/5;*/
-/*    grid-column: 5/7;*/
-    height: 100%;
-    width: 100%;
-}
-#special-instructions{
-/*    grid-row: 6/6;*/
-/*    grid-column: 1/4;*/
-/*    height: 50%;*/
-    width: 100%;
-}
-#save{
-/*    grid-row: 6/6;*/
-/*    grid-column: 4/7;*/
-    height: 100%;
-    width: 100%;
 }
 
 .image{
@@ -252,13 +178,14 @@ input[type=radio]{
     justify-content: center;
 }
 
-/*will have to override the query*/
-@media (min-width: 575px)
-.modal-dialog {
-     max-width: 700px;
-    margin: 1.75rem auto;
+@media (max-width: 950px) {
+    :root{
+    --addPlant-font-size: calc(0.6em + 1vh);
 }
-@media (min-width: 577px)
-.modal-dialog {
-     max-width: 700px;
-    margin: 1.75rem auto;
+}
+
+@media (max-width: 800px) {
+    :root{
+    --addPlant-font-size: calc(0.5em + 1vh);
+}
+}
